--- a/docker/pg/Dockerfile
+++ b/docker/pg/Dockerfile
@@ -4,6 +4,7 @@ FROM postgres:12
 RUN echo "debconf debconf/frontend select Noninteractive" | debconf-set-selections
 RUN apt-get update && apt-get install -y \
       postgresql-plpython3-12 \
+      postgresql-server-dev-all \
       python3-dev \
       python3-pip \
       # Utilities
@@ -11,6 +12,7 @@ RUN apt-get update && apt-get install -y \
       apt-transport-https \
       ca-certificates \
       gnupg \
+      git \
       wget
 
 # Setup postgresql data dir and config
@@ -22,17 +24,16 @@ RUN cat /usr/share/postgresql/postgresql.conf.sample > /data/postgresql.conf
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=cs186
 ENV POSTGRES_HOST_AUTH_METHOD=password
-ENV POSTGRES_DB=adventureworks
+ENV POSTGRES_DB=imdb
 ENV PGDATA=/data/
 
-ADD adventureworks.sql /opt/adventureworks.sql
+# ADD imdb_pg11 /opt/imdb_pg11
+ADD imdb /opt/imdb
 
 # Add initialization scripts
-ADD clean.sql /docker-entrypoint-initdb.d/001_clean.sql
-ADD load_data.sh /docker-entrypoint-initdb.d/002_load_data.sh
+ADD load_data.sh /docker-entrypoint-initdb.d/001_load_data.sh
 
 RUN pg_lsclusters
-
 
 VOLUME /data
 EXPOSE 5432
